Translate autodiff.ipynb via GitLocalize

--- a/es/autodiff.ipynb
+++ b/es/autodiff.ipynb
@@ -44,7 +44,7 @@
         "id": "qFdPvlXBOdUN"
       },
       "source": [
-        "# Introduction to Gradients and Automatic Differentiation"
+        "# Introduction to Gradients and Automatic Differentiationц"
       ]
     },
     {
@@ -71,12 +71,9 @@
       "source": [
         "## Automatic Differentiation and Gradients\n",
         "\n",
-        "[Automatic differentiation](https://en.wikipedia.org/wiki/Automatic_differentiation)\n",
-        "is useful for implementing machine learning algorithms such as\n",
-        "[backpropagation](https://en.wikipedia.org/wiki/Backpropagation) for training\n",
-        "neural networks.\n",
+        "[Automatic differentiation](https://en.wikipedia.org/wiki/Automatic_differentiation) is useful for implementing machine learning algorithms such as [backpropagation](https://en.wikipedia.org/wiki/Backpropagation) for training neural networks.\n",
         "\n",
-        "In this guide, we will discuss ways you can compute gradients with TensorFlow, especially in eager execution."
+        "En esta guía, analizaremos las formas en que puede calcular gradientes con TensorFlow, especialmente en una ejecución entusiasta.г"
       ]
     },
     {
@@ -86,7 +83,7 @@
         "id": "MUXex9ctTuDB"
       },
       "source": [
-        "## Setup"
+        "## Setupм"
       ]
     },
     {
@@ -129,7 +126,7 @@
       "source": [
         "## Cintas de degradado\n",
         "\n",
-        "TensorFlow provides the [tf.GradientTape](https://www.tensorflow.org/api_docs/python/tf/GradientTape) API for automatic differentiation; that is, computing the gradient of a computation with respect to some inputs, usually `tf.Variable`s. TensorFlow \"records\" relevant operations executed inside the context of a `tf.GradientTape` onto a \"tape\". TensorFlow then uses that tape to compute the gradients of a \"recorded\" computation using [reverse mode differentiation](https://en.wikipedia.org/wiki/Automatic_differentiation).\n",
+        "TensorFlow proporciona la API [tf.GradientTape](https://www.tensorflow.org/api_docs/python/tf/GradientTape) para la diferenciación automática; es decir, calcular el gradiente de un cálculo con respecto a algunas entradas, generalmente `tf.Variable` s. TensorFlow \"graba\" operaciones relevantes ejecutadas dentro del contexto de un `tf.GradientTape` en una \"cinta\". Luego, TensorFlow usa esa cinta para calcular los gradientes de un cálculo \"grabado\" mediante [la diferenciación de modo inverso](https://en.wikipedia.org/wiki/Automatic_differentiation) .4\n",
         "\n",
         "Aquí hay un ejemplo simple:"
       ]
@@ -150,7 +147,7 @@
         "x = tf.Variable(3.0)\n",
         "\n",
         "with tf.GradientTape() as tape:\n",
-        "  y = x**2"
+        "  y = x**2у"
       ]
     },
     {
